--- a/package.json
+++ b/package.json
@@ -1,49 +1,54 @@
 {
-  "name": "react-calendar",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "preview": "vite preview",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@reduxjs/toolkit": "^2.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-redux": "^9.2.0",
-    "tailwind-merge": "^2.6.0",
-    "uid": "^2.0.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "yup": "^1.6.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.10.7",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "postcss": "^8.4.49",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.5"
-  }
+    "name": "react-calendar",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "format:all": "prettier --log-level warn --write .",
+        "format:file": "prettier --log-level warn --write",
+        "format:check:all": "prettier --log-level warn --check .",
+        "lint": "eslint .",
+        "lint:all": "eslint . --report-unused-disable-directives --max-warnings 0",
+        "lint:file": "eslint --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "prepare": "husky"
+    },
+    "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/sortable": "^10.0.0",
+        "@hookform/resolvers": "^3.10.0",
+        "@reduxjs/toolkit": "^2.5.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.2",
+        "react-redux": "^9.2.0",
+        "tailwind-merge": "^2.6.0",
+        "uid": "^2.0.2",
+        "vite-tsconfig-paths": "^5.1.4",
+        "yup": "^1.6.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/node": "^22.10.7",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.17.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "husky": "^9.1.7",
+        "postcss": "^8.4.49",
+        "prettier": "3.4.2",
+        "tailwindcss": "^3.4.17",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.19.0",
+        "vite": "^6.0.5"
+    }
 }
