--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "lib": [
-            "dom",
-            "dom.iterable",
-        ],
+        "lib": ["dom", "dom.iterable"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
@@ -18,11 +15,9 @@
         "incremental": true,
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
-    "exclude": ["node_modules"],
+    "exclude": ["node_modules"]
 }
