--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,28 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "lib": ["dom", "dom.iterable"],
+        "target": "ES2020",
+        "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedSideEffectImports": true,
+        "moduleResolution": "bundler",
+        "isolatedModules": true,
+        "moduleDetection": "force",
+        "composite": true,
         "noEmit": false,
+        "jsx": "react-jsx",
         "esModuleInterop": true,
         "module": "esnext",
-        "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
-        "jsx": "preserve",
         "incremental": true,
+        "outDir": "./dist",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["src/*"]
         }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
